[gd_scene load_steps=3 format=3 uid="uid://swd7rhnhcr41"]

[ext_resource type="Theme" uid="uid://ddjoduj1ya6tp" path="res://assets/5PFH.tres" id="1_p4ru0"]
[ext_resource type="Script" path="res://Resources/SaveLoadUI.gd" id="2_oy01e"]

[node name="SaveLoadUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p4ru0")
script = ExtResource("2_oy01e")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SaveNameInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter save name"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="DeleteButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Delete Save"

[node name="ExportButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Export Save"

[node name="ImportButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Import Save"

[node name="SaveList" type="ItemList" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Status: Ready"
horizontal_alignment = 1

[connection signal="pressed" from="Panel/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="item_selected" from="Panel/VBoxContainer/SaveList" to="." method="_on_save_selected"]
